# cognito-mcp

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  pyproject.toml
src/cognito_mcp/: __main__.py  server.py
src/mcp_server_cognito/: __init__.py  __main__.py  server.py
